--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,4 +1,3 @@
-
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
@@ -10,3 +9,44 @@ group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
+#secret: !include secrets.yaml
+
+influxdb:
+  host: a0d7b954-influxdb
+  port: 8086
+  database: homeassistant
+  username: homeassistant
+  password: password
+  max_retries: 3
+  default_measurement: state
+
+# Example configuration.yaml entry
+sensor:
+  - platform: systemmonitor
+    resources:
+      - type: disk_use_percent
+        arg: /home
+      - type: memory_use_percent
+      - type: network_in
+        arg: enp1s0
+      - type: network_out
+        arg: enp1s0
+      - type: processor_use
+      - type: processor_temperature
+      - type: last_boot
+      - type: ipv4_address
+        arg: enp1s0
+
+speedtestdotnet:
+  scan_interval:
+    minutes: 30
+  monitored_conditions:
+    - ping
+    - download
+    - upload
+#mqtt:
+#broker: !secret_mqtt_url
+#port: !secret_mqtt_port
+#client_cert: home-assistant
+#discovery: true
+#discovery: homeassistant
