--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,7 +12,7 @@ input_datetime: !include_dir_named input_datetime/
 input_number: !include_dir_named input_number/
 input_select: !include_dir_named input_select/
 #input_text: !include_dir_named input_text/
-#input_boolean: !include_dir_named input_boolean/
+input_boolean: !include_dir_named input_boolean/
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
@@ -91,3 +91,13 @@ lovelace:
       icon: mdi:tools
       show_in_sidebar: true
       require_admin: true
+
+# Example configuration.yaml entry
+google:
+  client_id: !secret googlecalendar_client_id
+  client_secret: !secret googlecalendar_client_secret
+
+  # Example configuration.yaml entry
+spotcast:
+  sp_dc: !secret spotify_spotcast_dc
+  sp_key: !secret spotify_spotcast_key
