--- a/automation/platform/ha_automations_reloaded.yaml
+++ b/automation/platform/ha_automations_reloaded.yaml
@@ -1,5 +1,5 @@
 alias: "HA automations reloaded"
-initial_state: "on"
+initial_state: true
 trigger:
   - platform: event
     event_type: automation_reloaded
