--- a/automation/platform/ha_started.yaml
+++ b/automation/platform/ha_started.yaml
@@ -1,5 +1,5 @@
 alias: "HA started"
-initial_state: "on"
+initial_state: true
 trigger:
   platform: homeassistant
   event: start
@@ -7,4 +7,3 @@ action:
   - service: notify.mobile_app_pete_s20
     data:
       message: "Home Assistant {{ states('sensor.hass_installed') }} has started on Server ({{ as_timestamp(utcnow())|timestamp_utc }})"
-
