--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,12 +8,12 @@ tts:
 sensor: !include sensors.yaml
 shell_command: !include shell_command.yaml
 group: !include_dir_named groups/
+automation: !include_dir_list automation/
 input_datetime: !include_dir_named input_datetime/
 input_number: !include_dir_named input_number/
 input_select: !include_dir_named input_select/
 #input_text: !include_dir_named input_text/
 input_boolean: !include_dir_named input_boolean/
-automation: !include_dir_named automation/
 script: !include scripts.yaml
 scene: !include scenes.yaml
 binary_sensor: !include binary_sensor.yaml
