--- a/lib/automation_stuff/auto/all_away_media_off.yaml
+++ b/lib/automation_stuff/auto/all_away_media_off.yaml
@@ -1,5 +1,5 @@
 alias: "All away media off"
-initial_state: "off"
+initial_state: false
 trigger:
   - platform: state
     entity_id: input_boolean.home_occupied
@@ -11,16 +11,7 @@ condition:
       entity_id: media_player.office
       state: "playing"
     - condition: state
-      entity_id: media_player.family_room
-      state: "playing"
-    - condition: state
       entity_id: media_player.living_room
-      state: "playing"
-    - condition: state
-      entity_id: media_player.Pete
-      state: "playing"
-    - condition: state
-      entity_id: media_player.Julie
       state: "playing"
 action:
   service: media_player.media_pause
