--- a/automation/home/water_plants.yaml
+++ b/automation/home/water_plants.yaml
@@ -2,8 +2,8 @@ alias: Water the Plant
 description: ''
 trigger:
 - platform: numeric_state
-  entity_id: sensor.soil_moisture_level
-  below: '40'
+  entity_id: sensor.plante_max_moisture_level
+  below: 40
 condition:
 - condition: sun
   before: sunset
