--- a/automations/people/pete_is_awake.yaml
+++ b/automations/people/pete_is_awake.yaml
@@ -1,18 +1,18 @@
-alias: "Julie is Up"
+alias: "Pete is Up"
 initial_state: true
 trigger:
   # Something gets unplugged
   - platform: state
-    entity_id: binary_sensor.julie_s20_en_charge
-    to: off
+    entity_id: binary_sensor.pete_s20_is_charging
+    to: 'off'
 condition:
   - condition: and
     conditions:
       - condition: state
-        entity_id: input_boolean.julie_is_home
+        entity_id: input_boolean.pete_is_home
         state: "on"
       - condition: state
-        entity_id: input_boolean.julie_in_bed
+        entity_id: input_boolean.pete_in_bed
         state: "on"
       - condition: time
         after: "05:00:00"
@@ -20,4 +20,5 @@ condition:
 action:
   - service: input_boolean.turn_off
     entity_id:
-      - input_boolean.julie_in_bed
+      - input_boolean.pete_in_bed
+      - input_boolean.bedtime
