--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,39 @@
+- id: 'dishwasher'
+  alias: Dishwasher test
+  description: ''
+  trigger:
+  - platform: state
+    entity_id: sensor.dishwasher_dishwasher_job_state
+  condition:
+  - condition: sun
+    before: sunset
+    after: sunrise
+  action:
+  - service: tts.google_translate_say
+    data:
+      entity_id: media_player.kitchenmini
+      message: the dishwasher is now {{states.sensor.dishwasher_dishwasher_job_state.state}}
+  mode: single
 
+- id: 'home'
+  alias: "Home not occupied"
+  initial_state: true
+  trigger:
+    - platform: state
+      entity_id:
+        - device_tracker.julie_s20_ping
+        - device_tracker.pete_s20_ping
+      to: away
+  #condition:
+    #condition: and
+    #conditions:
+      # We're all away
+      #- condition: state
+      #  entity_id: input_boolean.julie_is_home
+      #  state: "off"
+      #- condition: state
+      #  entity_id: input_boolean.pete_is_home
+      #  state: "off"
+  action:
+    - service: input_boolean.turn_off
+      entity_id: input_boolean.home_occupied
